<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_img_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="120dp"
        app:cardCornerRadius="@dimen/_4dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_height="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/img_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/grey"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/img_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@color/black_transparent"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_in_img_playlist"
                app:layout_constraintTop_toTopOf="@id/img_transparent"
                app:layout_constraintBottom_toBottomOf="@id/img_transparent"
                app:layout_constraintStart_toStartOf="@id/img_transparent"
                android:layout_marginStart="@dimen/_52dp"
                android:textColor="@color/white"
                android:text="@string/playlist"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_img_video"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/emotional_well_being_healing_practices_for_children"
        android:layout_marginEnd="@dimen/_16dp"/>
    
    <TextView
        android:id="@+id/tv_playlist_video_count"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_32_video_series"
        app:layout_constraintTop_toBottomOf="@id/tv_playlist_name"
        android:textSize="@dimen/_12sp"
        android:layout_marginEnd="@dimen/_16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>