<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.videodetail.VideoDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/container_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_items" />

        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="@dimen/progress_bar_parameters"
            android:layout_height="@dimen/progress_bar_parameters"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_toolbar" />

        <TextView
            android:id="@+id/tv_name_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/emotional_well_being_healing_practices_for_children"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youtube_player_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_download_video"
            android:layout_width="142dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/bg_btn_download"
            android:drawableEnd="@drawable/ic_download"
            android:drawableTint="@color/red"
            android:gravity="center"

            android:text="@string/download"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@id/tv_name_video"
            app:layout_constraintTop_toBottomOf="@id/tv_name_video" />

        <TextView
            android:id="@+id/tv_desc_video"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_margin="@dimen/_16dp"
            android:fontFamily="sans-serif"
            android:text="@string/test_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_download_video" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_include"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/layout_no_connection"
            layout="@layout/layout_no_internet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/layout_download"
            layout="@layout/layout_btn_download" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>